# whatsapp-ai-saas

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  package.json  pnpm-workspace.yaml
.claude/: settings.local.json  skills-registry.md
.github/workflows/: ci-node.yml  ci-python.yml  deploy.yml
docs/: architecture-ledger.md  runbook.md
docs/adr/: 001-redis-streams-over-rabbitmq.md  002-chromadb-over-pgvector.md  003-langchain-llm-orchestration.md  004-fastify-over-express.md  (+4 more)
infra/: .env.example  Caddyfile  docker-compose.yml  migrate.sh
services/flow-engine/: Dockerfile  pyproject.toml
services/flow-engine/flow_engine/: config.py  main.py
services/flow-engine/flow_engine/application/: flow_executor.py  node_executors.py  session_service.py  trigger_matcher.py
services/flow-engine/flow_engine/domain/: errors.py  models.py  ports.py
services/flow-engine/flow_engine/infrastructure/: crypto.py
services/flow-engine/flow_engine/infrastructure/chroma/: chroma_retriever.py
services/flow-engine/flow_engine/infrastructure/llm/: langchain_llm.py
services/flow-engine/flow_engine/infrastructure/meta/: meta_send_client.py
services/flow-engine/flow_engine/infrastructure/postgres/: postgres_conv_log.py  postgres_flow_repo.py  postgres_tenant_credentials_repo.py
services/flow-engine/flow_engine/infrastructure/redis/: redis_lock.py  redis_session_repo.py
services/flow-engine/flow_engine/interfaces/: admin_api.py  consumer.py
services/flow-engine/tests/: conftest.py
services/flow-engine/tests/unit/: test_consumer.py  test_flow_executor.py  test_node_executors.py  test_trigger_matcher.py
services/rag-indexer/: Dockerfile  pyproject.toml
services/rag-indexer/rag_indexer/: consumer.py  main.py
services/rag-indexer/rag_indexer/application/: index_document.py
services/rag-indexer/rag_indexer/domain/: models.py  ports.py
services/rag-indexer/rag_indexer/infrastructure/: chroma_store.py  embedder.py  minio_store.py  postgres_repo.py
services/rag-indexer/tests/: conftest.py
services/rag-indexer/tests/unit/: test_chunker.py  test_embedder.py  test_index_document.py
(+139 files in other folders)
