[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flow-engine"
version = "0.1.0"
description = "Flow Engine service for the WhatsApp AI SaaS platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "chromadb>=0.5",
    "cryptography>=42.0",
    "sentence-transformers>=2.7",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "langchain-core>=0.3,<0.4",
    "httpx>=0.27",
    "jmespath>=1.0",
    "python-json-logger>=2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
flow-engine = "flow_engine.main:main"

[tool.hatch.build.targets.wheel]
packages = ["flow_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["flow_engine"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
