[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-indexer"
version = "0.1.0"
description = "RAG document indexer service for the WhatsApp AI SaaS platform"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
    "redis>=5.0",
    "minio>=7.2",
    "psycopg2-binary>=2.9",
    "pypdf>=4.0",
    "mistune>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "numpy>=1.26",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
rag-indexer = "rag_indexer.main:main"

[tool.hatch.build.targets.wheel]
packages = ["rag_indexer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]

[tool.coverage.run]
source = ["rag_indexer"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70
